--- a/topsis_pypi.ipynb
+++ b/topsis_pypi.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -15,18 +15,14 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "Requirement already satisfied: topsis-pushkar-manocha-102303751 in c:\\users\\pushk\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (1.0.1)\n",
+            "Requirement already satisfied: numpy in c:\\users\\pushk\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from topsis-pushkar-manocha-102303751) (2.4.1)\n",
+            "Requirement already satisfied: pandas in c:\\users\\pushk\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from topsis-pushkar-manocha-102303751) (2.3.3)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\pushk\\appdata\\roaming\\python\\python312\\site-packages (from pandas->topsis-pushkar-manocha-102303751) (2.9.0.post0)\n",
+            "Requirement already satisfied: pytz>=2020.1 in c:\\users\\pushk\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas->topsis-pushkar-manocha-102303751) (2025.2)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\pushk\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas->topsis-pushkar-manocha-102303751) (2025.3)\n",
+            "Requirement already satisfied: six>=1.5 in c:\\users\\pushk\\appdata\\roaming\\python\\python312\\site-packages (from python-dateutil>=2.8.2->pandas->topsis-pushkar-manocha-102303751) (1.17.0)\n",
             "Note: you may need to restart the kernel to use updated packages.\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "ERROR: Could not find a version that satisfies the requirement topsis-pushkar-manocha-102303751 (from versions: none)\n",
-            "ERROR: No matching distribution found for topsis-pushkar-manocha-102303751\n",
-            "\n",
-            "[notice] A new release of pip is available: 23.2.1 -> 25.3\n",
-            "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
           ]
         }
       ],
@@ -36,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -119,7 +115,7 @@
               "3     D    275        7      13      128"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -143,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -153,21 +149,21 @@
       },
       "outputs": [
         {
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
-            "'topsis-hk' is not recognized as an internal or external command,\n",
-            "operable program or batch file.\n"
+            "TOPSIS completed successfully!\n",
+            " Output file generated: output.csv\n"
           ]
         }
       ],
       "source": [
-        "!topsis-hk input.csv \"1,1,1,1\" \"-,+,+,+\" output.csv\n"
+        "!topsis-pushkar-manocha-102303751 input.csv \"1,1,1,1\" \"-,+,+,+\" output.csv\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -199,86 +195,74 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>Model</th>\n",
-              "      <th>Storage</th>\n",
-              "      <th>Camera</th>\n",
               "      <th>Price</th>\n",
-              "      <th>Rating</th>\n",
+              "      <th>Battery</th>\n",
+              "      <th>Camera</th>\n",
+              "      <th>Storage</th>\n",
               "      <th>Topsis Score (102303751)</th>\n",
-              "      <th>Rank (Pushkar Manocha)</th>\n",
+              "      <th>Rank (102303751)</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>M1</td>\n",
-              "      <td>16</td>\n",
-              "      <td>12</td>\n",
+              "      <td>A</td>\n",
               "      <td>250</td>\n",
-              "      <td>5</td>\n",
-              "      <td>0.534277</td>\n",
-              "      <td>3</td>\n",
+              "      <td>8</td>\n",
+              "      <td>12</td>\n",
+              "      <td>128</td>\n",
+              "      <td>0.389366</td>\n",
+              "      <td>2</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>M2</td>\n",
-              "      <td>16</td>\n",
-              "      <td>8</td>\n",
+              "      <td>B</td>\n",
               "      <td>200</td>\n",
-              "      <td>3</td>\n",
-              "      <td>0.308368</td>\n",
-              "      <td>5</td>\n",
+              "      <td>6</td>\n",
+              "      <td>10</td>\n",
+              "      <td>64</td>\n",
+              "      <td>0.228452</td>\n",
+              "      <td>4</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>M3</td>\n",
-              "      <td>32</td>\n",
-              "      <td>16</td>\n",
+              "      <td>C</td>\n",
               "      <td>300</td>\n",
-              "      <td>4</td>\n",
-              "      <td>0.691632</td>\n",
+              "      <td>9</td>\n",
+              "      <td>14</td>\n",
+              "      <td>256</td>\n",
+              "      <td>0.771548</td>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>M4</td>\n",
-              "      <td>32</td>\n",
-              "      <td>8</td>\n",
+              "      <td>D</td>\n",
               "      <td>275</td>\n",
-              "      <td>4</td>\n",
-              "      <td>0.534737</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>M5</td>\n",
-              "      <td>16</td>\n",
-              "      <td>16</td>\n",
-              "      <td>225</td>\n",
-              "      <td>2</td>\n",
-              "      <td>0.401046</td>\n",
-              "      <td>4</td>\n",
+              "      <td>7</td>\n",
+              "      <td>13</td>\n",
+              "      <td>128</td>\n",
+              "      <td>0.356630</td>\n",
+              "      <td>3</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "  Model  Storage  Camera  Price  Rating  Topsis Score (102303751)  \\\n",
-              "0    M1       16      12    250       5                  0.534277   \n",
-              "1    M2       16       8    200       3                  0.308368   \n",
-              "2    M3       32      16    300       4                  0.691632   \n",
-              "3    M4       32       8    275       4                  0.534737   \n",
-              "4    M5       16      16    225       2                  0.401046   \n",
+              "  Model  Price  Battery  Camera  Storage  Topsis Score (102303751)  \\\n",
+              "0     A    250        8      12      128                  0.389366   \n",
+              "1     B    200        6      10       64                  0.228452   \n",
+              "2     C    300        9      14      256                  0.771548   \n",
+              "3     D    275        7      13      128                  0.356630   \n",
               "\n",
-              "   Rank (Pushkar Manocha)  \n",
-              "0                       3  \n",
-              "1                       5  \n",
-              "2                       1  \n",
-              "3                       2  \n",
-              "4                       4  "
+              "   Rank (102303751)  \n",
+              "0                 2  \n",
+              "1                 4  \n",
+              "2                 1  \n",
+              "3                 3  "
             ]
           },
-          "execution_count": 6,
+          "execution_count": 25,
           "metadata": {},
           "output_type": "execute_result"
         }
