--- a/topsis_pypi.ipynb
+++ b/topsis_pypi.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 52,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -32,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 53,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -63,59 +63,95 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>Model</th>\n",
-              "      <th>Price</th>\n",
-              "      <th>Battery</th>\n",
-              "      <th>Camera</th>\n",
-              "      <th>Storage</th>\n",
+              "      <th>P1</th>\n",
+              "      <th>P2</th>\n",
+              "      <th>P3</th>\n",
+              "      <th>P4</th>\n",
+              "      <th>P5</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>A</td>\n",
-              "      <td>250</td>\n",
-              "      <td>8</td>\n",
-              "      <td>12</td>\n",
-              "      <td>128</td>\n",
+              "      <td>0.84</td>\n",
+              "      <td>0.71</td>\n",
+              "      <td>6.7</td>\n",
+              "      <td>42.1</td>\n",
+              "      <td>12.59</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>B</td>\n",
-              "      <td>200</td>\n",
-              "      <td>6</td>\n",
-              "      <td>10</td>\n",
-              "      <td>64</td>\n",
+              "      <td>0.91</td>\n",
+              "      <td>0.83</td>\n",
+              "      <td>7.0</td>\n",
+              "      <td>31.7</td>\n",
+              "      <td>10.11</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>C</td>\n",
-              "      <td>300</td>\n",
-              "      <td>9</td>\n",
-              "      <td>14</td>\n",
-              "      <td>256</td>\n",
+              "      <td>0.79</td>\n",
+              "      <td>0.62</td>\n",
+              "      <td>4.8</td>\n",
+              "      <td>46.7</td>\n",
+              "      <td>13.23</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>D</td>\n",
-              "      <td>275</td>\n",
-              "      <td>7</td>\n",
-              "      <td>13</td>\n",
-              "      <td>128</td>\n",
+              "      <td>0.78</td>\n",
+              "      <td>0.61</td>\n",
+              "      <td>6.4</td>\n",
+              "      <td>42.4</td>\n",
+              "      <td>12.55</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0.94</td>\n",
+              "      <td>0.88</td>\n",
+              "      <td>3.6</td>\n",
+              "      <td>62.2</td>\n",
+              "      <td>16.91</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>0.88</td>\n",
+              "      <td>0.77</td>\n",
+              "      <td>6.5</td>\n",
+              "      <td>51.5</td>\n",
+              "      <td>14.91</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>0.66</td>\n",
+              "      <td>0.44</td>\n",
+              "      <td>5.3</td>\n",
+              "      <td>48.9</td>\n",
+              "      <td>13.83</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>0.93</td>\n",
+              "      <td>0.86</td>\n",
+              "      <td>3.4</td>\n",
+              "      <td>37.0</td>\n",
+              "      <td>10.55</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "  Model  Price  Battery  Camera  Storage\n",
-              "0     A    250        8      12      128\n",
-              "1     B    200        6      10       64\n",
-              "2     C    300        9      14      256\n",
-              "3     D    275        7      13      128"
+              "     P1    P2   P3    P4     P5\n",
+              "0  0.84  0.71  6.7  42.1  12.59\n",
+              "1  0.91  0.83  7.0  31.7  10.11\n",
+              "2  0.79  0.62  4.8  46.7  13.23\n",
+              "3  0.78  0.61  6.4  42.4  12.55\n",
+              "4  0.94  0.88  3.6  62.2  16.91\n",
+              "5  0.88  0.77  6.5  51.5  14.91\n",
+              "6  0.66  0.44  5.3  48.9  13.83\n",
+              "7  0.93  0.86  3.4  37.0  10.55"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 53,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -124,11 +160,11 @@
         "import pandas as pd\n",
         "\n",
         "data = {\n",
-        "    \"Model\": [\"A\", \"B\", \"C\", \"D\"],\n",
-        "    \"Price\": [250, 200, 300, 275],\n",
-        "    \"Battery\": [8, 6, 9, 7],\n",
-        "    \"Camera\": [12, 10, 14, 13],\n",
-        "    \"Storage\": [128, 64, 256, 128]\n",
+        "    \"P1\": [0.84, 0.91, 0.79, 0.78, 0.94, 0.88, 0.66, 0.93],\n",
+        "    \"P2\": [0.71, 0.83, 0.62, 0.61, 0.88, 0.77, 0.44, 0.86],\n",
+        "    \"P3\": [6.7, 7, 4.8, 6.4, 3.6, 6.5, 5.3, 3.4],\n",
+        "    \"P4\": [42.1, 31.7, 46.7, 42.4, 62.2, 51.5, 48.9, 37],\n",
+        "    \"P5\": [12.59, 10.11, 13.23, 12.55, 16.91, 14.91, 13.83, 10.55]\n",
         "}\n",
         "\n",
         "df = pd.DataFrame(data)\n",
@@ -139,7 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 54,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -152,18 +188,17 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "TOPSIS completed successfully!\n",
-            " Output file generated: output.csv\n"
+            " Error: Expected 4 weights, got 5.\n"
           ]
         }
       ],
       "source": [
-        "!topsis-pushkar-manocha-102303751 input.csv \"1,1,1,1\" \"-,+,+,+\" output.csv\n"
+        "!topsis-pushkar-manocha-102303751 input.csv \"1,1,1,1,1\" \"+,+,-,+,+\" output.csv\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 55,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -194,11 +229,11 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>Model</th>\n",
-              "      <th>Price</th>\n",
-              "      <th>Battery</th>\n",
-              "      <th>Camera</th>\n",
-              "      <th>Storage</th>\n",
+              "      <th>P1</th>\n",
+              "      <th>P2</th>\n",
+              "      <th>P3</th>\n",
+              "      <th>P4</th>\n",
+              "      <th>P5</th>\n",
               "      <th>Topsis Score (102303751)</th>\n",
               "      <th>Rank (102303751)</th>\n",
               "    </tr>\n",
@@ -206,63 +241,101 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>A</td>\n",
-              "      <td>250</td>\n",
-              "      <td>8</td>\n",
-              "      <td>12</td>\n",
-              "      <td>128</td>\n",
-              "      <td>0.389366</td>\n",
+              "      <td>0.84</td>\n",
+              "      <td>0.71</td>\n",
+              "      <td>6.7</td>\n",
+              "      <td>42.1</td>\n",
+              "      <td>12.59</td>\n",
+              "      <td>0.644839</td>\n",
               "      <td>2</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>B</td>\n",
-              "      <td>200</td>\n",
-              "      <td>6</td>\n",
-              "      <td>10</td>\n",
-              "      <td>64</td>\n",
-              "      <td>0.228452</td>\n",
-              "      <td>4</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>C</td>\n",
-              "      <td>300</td>\n",
-              "      <td>9</td>\n",
-              "      <td>14</td>\n",
-              "      <td>256</td>\n",
-              "      <td>0.771548</td>\n",
+              "      <td>0.91</td>\n",
+              "      <td>0.83</td>\n",
+              "      <td>7.0</td>\n",
+              "      <td>31.7</td>\n",
+              "      <td>10.11</td>\n",
+              "      <td>0.672750</td>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>D</td>\n",
-              "      <td>275</td>\n",
+              "      <th>2</th>\n",
+              "      <td>0.79</td>\n",
+              "      <td>0.62</td>\n",
+              "      <td>4.8</td>\n",
+              "      <td>46.7</td>\n",
+              "      <td>13.23</td>\n",
+              "      <td>0.442269</td>\n",
               "      <td>7</td>\n",
-              "      <td>13</td>\n",
-              "      <td>128</td>\n",
-              "      <td>0.356630</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>0.78</td>\n",
+              "      <td>0.61</td>\n",
+              "      <td>6.4</td>\n",
+              "      <td>42.4</td>\n",
+              "      <td>12.55</td>\n",
+              "      <td>0.572518</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0.94</td>\n",
+              "      <td>0.88</td>\n",
+              "      <td>3.6</td>\n",
+              "      <td>62.2</td>\n",
+              "      <td>16.91</td>\n",
+              "      <td>0.469586</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>0.88</td>\n",
+              "      <td>0.77</td>\n",
+              "      <td>6.5</td>\n",
+              "      <td>51.5</td>\n",
+              "      <td>14.91</td>\n",
+              "      <td>0.630917</td>\n",
               "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>0.66</td>\n",
+              "      <td>0.44</td>\n",
+              "      <td>5.3</td>\n",
+              "      <td>48.9</td>\n",
+              "      <td>13.83</td>\n",
+              "      <td>0.394819</td>\n",
+              "      <td>8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>0.93</td>\n",
+              "      <td>0.86</td>\n",
+              "      <td>3.4</td>\n",
+              "      <td>37.0</td>\n",
+              "      <td>10.55</td>\n",
+              "      <td>0.495474</td>\n",
+              "      <td>5</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "  Model  Price  Battery  Camera  Storage  Topsis Score (102303751)  \\\n",
-              "0     A    250        8      12      128                  0.389366   \n",
-              "1     B    200        6      10       64                  0.228452   \n",
-              "2     C    300        9      14      256                  0.771548   \n",
-              "3     D    275        7      13      128                  0.356630   \n",
-              "\n",
-              "   Rank (102303751)  \n",
-              "0                 2  \n",
-              "1                 4  \n",
-              "2                 1  \n",
-              "3                 3  "
+              "     P1    P2   P3    P4     P5  Topsis Score (102303751)  Rank (102303751)\n",
+              "0  0.84  0.71  6.7  42.1  12.59                  0.644839                 2\n",
+              "1  0.91  0.83  7.0  31.7  10.11                  0.672750                 1\n",
+              "2  0.79  0.62  4.8  46.7  13.23                  0.442269                 7\n",
+              "3  0.78  0.61  6.4  42.4  12.55                  0.572518                 4\n",
+              "4  0.94  0.88  3.6  62.2  16.91                  0.469586                 6\n",
+              "5  0.88  0.77  6.5  51.5  14.91                  0.630917                 3\n",
+              "6  0.66  0.44  5.3  48.9  13.83                  0.394819                 8\n",
+              "7  0.93  0.86  3.4  37.0  10.55                  0.495474                 5"
             ]
           },
-          "execution_count": 25,
+          "execution_count": 55,
           "metadata": {},
           "output_type": "execute_result"
         }
